[gd_scene load_steps=14 format=2]

[ext_resource path="res://popochiu/GraphicInterface/Popups/Documents/sprites/left_arrow-pressed.png" type="Texture" id=1]
[ext_resource path="res://popochiu/GraphicInterface/Popups/Documents/sprites/left_arrow-hover.png" type="Texture" id=2]
[ext_resource path="res://popochiu/GraphicInterface/Popups/Documents/sprites/right_arrow-disabled.png" type="Texture" id=3]
[ext_resource path="res://popochiu/GraphicInterface/Popups/Documents/sprites/right_arrow-hover.png" type="Texture" id=4]
[ext_resource path="res://popochiu/GraphicInterface/Popups/Documents/sprites/right_arrow-normal.png" type="Texture" id=5]
[ext_resource path="res://popochiu/GraphicInterface/Popups/Documents/sprites/right_arrow-pressed.png" type="Texture" id=6]
[ext_resource path="res://popochiu/Rooms/Technician/sheets.png" type="Texture" id=7]
[ext_resource path="res://popochiu/GraphicInterface/Popups/Documents/sprites/left_arrow-normal.png" type="Texture" id=8]
[ext_resource path="res://popochiu/GraphicInterface/Popups/Documents/sprites/left_arrow-disabled.png" type="Texture" id=9]
[ext_resource path="res://popochiu/GraphicInterface/Resources/DynamicFonts/MonkeyIsland-14.tres" type="DynamicFont" id=10]
[ext_resource path="res://popochiu/GraphicInterface/Resources/DynamicFonts/MonkeyIsland-outline-14.tres" type="DynamicFont" id=11]
[ext_resource path="res://popochiu/GraphicInterface/Popups/Documents/Documents.gd" type="Script" id=12]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )

[node name="Documents" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="BackgroundContainer" type="MarginContainer" parent="."]
margin_right = 320.0
margin_bottom = 180.0
mouse_filter = 2
custom_constants/margin_right = 24
custom_constants/margin_top = 16
custom_constants/margin_left = 24

[node name="VBoxContainer" type="VBoxContainer" parent="BackgroundContainer"]
margin_left = 24.0
margin_top = 16.0
margin_right = 296.0
margin_bottom = 180.0
custom_constants/separation = 16
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="BackgroundContainer/VBoxContainer"]
margin_top = 17.0
margin_right = 272.0
margin_bottom = 119.0
alignment = 1

[node name="BtnLeft" type="TextureButton" parent="BackgroundContainer/VBoxContainer/HBoxContainer"]
margin_top = 39.0
margin_right = 20.0
margin_bottom = 62.0
size_flags_vertical = 4
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 1 )
texture_hover = ExtResource( 2 )
texture_disabled = ExtResource( 9 )

[node name="Type" type="TextureRect" parent="BackgroundContainer/VBoxContainer/HBoxContainer"]
self_modulate = Color( 1, 1, 1, 0.498039 )
margin_left = 72.0
margin_right = 199.0
margin_bottom = 102.0
mouse_filter = 2
size_flags_horizontal = 6
texture = ExtResource( 7 )

[node name="BtnRight" type="TextureButton" parent="BackgroundContainer/VBoxContainer/HBoxContainer"]
margin_left = 252.0
margin_top = 39.0
margin_right = 272.0
margin_bottom = 62.0
size_flags_vertical = 4
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 4 )
texture_disabled = ExtResource( 3 )

[node name="PagesCounter" type="Label" parent="BackgroundContainer/VBoxContainer"]
margin_top = 135.0
margin_right = 272.0
margin_bottom = 146.0
custom_colors/font_color = Color( 1, 0.733333, 0.192157, 1 )
custom_fonts/font = ExtResource( 10 )
text = "0/0"
align = 1

[node name="TextsContainer" type="MarginContainer" parent="."]
margin_right = 320.0
margin_bottom = 180.0
mouse_filter = 2
custom_constants/margin_right = 24
custom_constants/margin_top = 16
custom_constants/margin_left = 24
custom_constants/margin_bottom = 32

[node name="RichTextLabel" type="RichTextLabel" parent="TextsContainer"]
visible = false
margin_left = 52.0
margin_top = 20.0
margin_right = 268.0
margin_bottom = 144.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 216, 124 )
mouse_filter = 2
size_flags_horizontal = 4
size_flags_vertical = 4
custom_colors/default_color = Color( 0.0823529, 0.0823529, 0.0823529, 1 )
custom_fonts/normal_font = ExtResource( 11 )
bbcode_enabled = true
bbcode_text = "From the previous technician

To make the elevator to work, its mainboard needs a battery and a memory card with the program that establishes its behavior (that is the floors it can access) ¿why they do something like this?"
meta_underlined = false
text = "From the previous technician

To make the elevator to work, its mainboard needs a battery and a memory card with the program that establishes its behavior (that is the floors it can access) ¿why they do something like this?"
scroll_active = false

[node name="Content" type="Label" parent="TextsContainer"]
margin_left = 52.0
margin_top = 20.0
margin_right = 268.0
margin_bottom = 144.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 216, 124 )
size_flags_horizontal = 4
custom_colors/font_color = Color( 0.0823529, 0.0823529, 0.0823529, 1 )
custom_fonts/font = ExtResource( 11 )
valign = 1
autowrap = true
